--- a/package.json
+++ b/package.json
@@ -9,13 +9,19 @@
   },
   "dependencies": {
     "core-js": "^3.6.4",
-    "vue": "^2.6.11"
+    "element-ui": "^2.13.1",
+    "vue": "^2.6.11",
+    "vue-router": "^3.1.6",
+    "vuedraggable": "^2.23.2",
+    "vuex": "^3.3.0"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.9.6",
     "@vue/cli-plugin-babel": "^4.3.0",
     "@vue/cli-plugin-eslint": "^4.3.0",
     "@vue/cli-service": "^4.3.0",
     "babel-eslint": "^10.1.0",
+    "babel-plugin-component": "^1.1.1",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
     "less": "^3.0.4",
